# zrob

./: README.md  dgs.py  pyproject.toml  zrob.py
src/zrob/: __init__.py  colour.py  logger.py
src/zrob/classes/: action.py  builder.py  prereq.py  rule.py
